name:                    haskoin-node
version:                 0.5.0
synopsis:                Implementation of a Bitoin node.
description:
    Implementation of the Bitcoin network protocol that allows you to
    synchronize headers (with SPV validation), download blocks and transactions.
    This package can be used to implement wallets or other Bitcoin components
    that require talking to the Bitcoin network. It provides the following
    features:
    .
    * Peer management
    * Peer discovery
    * Headers-first synchronization
    * Data (block/transaction) download from peers
    * Merkle block download
    * Hooks to allow for full node implementation
homepage:                http://github.com/haskoin/haskoin#readme
bug-reports:             http://github.com/haskoin/haskoin/issues
license:                 PublicDomain
license-file:            UNLICENSE
author:                  Philippe Laprade, Jean-Pierre Rupp
maintainer:              xenog@protonmail.com
category:                Bitcoin, Finance, Network
build-type:              Simple
cabal-version:           >= 1.10

source-repository head
    type:     git
    location: https://github.com/haskoin/haskoin.git

library
    hs-source-dirs:      src
    exposed-modules:     Network.Haskoin.Node
                         Network.Haskoin.Node.Common
    other-modules:       Network.Haskoin.Node.Peer
                         Network.Haskoin.Node.Manager
                         Network.Haskoin.Node.Chain
                         Network.Haskoin.Node.Node
    build-depends:       aeson >= 1.2 && < 1.3
                       , base >= 4.8 && < 5
                       , bytestring >= 0.10 && < 0.11
                       , cereal >= 0.5 && < 0.6
                       , containers >= 0.5 && < 0.6
                       , conduit >= 1.2 && < 1.3
                       , conduit-extra >= 1.2 && < 1.3
                       , data-default >= 0.7 && < 0.8
                       , deepseq >= 1.4 && < 1.5
                       , directory >= 1.2 && < 1.4
                       , either >= 4.5 && < 4.6
                       , exceptions >= 0.8 && < 0.9
                       , filepath >= 1.4 && < 1.5
                       , hashable >= 1.2 && < 1.3
                       , haskoin-core >= 0.5 && < 0.6
                       , rocksdb-haskell >= 1.0 && < 1.1
                       , lifted-async >= 0.9 && < 0.10
                       , lifted-base >= 0.2 && < 0.3
                       , monad-control >= 1.0 && < 1.1
                       , monad-logger >= 0.3 && < 0.4
                       , mtl >= 2.2 && < 2.3
                       , network >= 2.6 && < 2.7
                       , nqe >= 0.1 && < 0.2
                       , random >= 1.1 && < 1.2
                       , resourcet >= 1.1 && < 1.2
                       , stm >= 2.4 && < 2.5
                       , string-conversions >= 0.4 && < 0.5
                       , text >= 1.2 && < 1.3
                       , time >= 1.7 && < 1.9
                       , transformers >= 0.5 && < 0.6
                       , transformers-base >= 0.4 && < 0.5
                       , unique >= 0 && < 0.1
    default-language:    Haskell2010

test-suite haskoin-node-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Main.hs
    build-depends:       base >= 4.8 && < 5
                       , bytestring >= 0.10 && < 0.11
                       , cereal >= 0.5 && < 0.6
                       , directory >= 1.2 && < 1.4
                       , exceptions >= 0.8 && < 0.9
                       , filepath >= 1.4 && < 1.5
                       , haskoin-node
                       , haskoin-core >= 0.5 && < 0.6
                       , HUnit >= 1.6 && < 1.7
                       , QuickCheck >= 2.10 && < 2.11
                       , test-framework >= 0.8 && < 0.9
                       , test-framework-quickcheck2 >= 0.3 && < 0.4
                       , test-framework-hunit >= 0.3 && < 0.4
                       , lifted-async >= 0.9 && < 0.10
                       , lifted-base >= 0.2 && < 0.3
                       , monad-control >= 1.0 && < 1.1
                       , monad-logger >= 0.3 && < 0.4
                       , network >= 2.6 && < 2.7
                       , nqe >= 0.1 && < 0.2
                       , random >= 1.1 && < 1.2
                       , stm >= 2.4 && < 2.5
                       , string-conversions >= 0.4 && < 0.5
                       , temporary >= 1.2 && < 1.3
                       , transformers-base >= 0.4 && < 0.5
    default-language:    Haskell2010
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
