name:                    haskoin-store
version:                 0.1.0
synopsis:                Storage and index for Bitcoin wallets
description:
    Store all blocks, transactions, and addresses required for a Bitcoin wallet
    to function.
homepage:                http://github.com/haskoin/haskoin#readme
bug-reports:             http://github.com/haskoin/haskoin/issues
license:                 PublicDomain
license-file:            UNLICENSE
author:                  Jean-Pierre Rupp
maintainer:              xenog@protonmail.com
category:                Bitcoin, Finance, Network
build-type:              Simple
cabal-version:           >= 1.10

source-repository head
    type:     git
    location: https://github.com/haskoin/haskoin.git

library
    hs-source-dirs:      src
    exposed-modules:     Network.Haskoin.Store
    other-modules:       Network.Haskoin.Store.Block
                         Network.Haskoin.Store.Common
                         Network.Haskoin.Store.Types
    build-depends:       aeson >= 1.2 && < 1.3
                       , base >= 4.8 && < 5
                       , bytestring >= 0.10 && < 0.11
                       , cereal >= 0.5 && < 0.6
                       , containers >= 0.5 && < 0.6
                       , data-default >= 0.7 && < 0.8
                       , deepseq >= 1.4 && < 1.5
                       , directory >= 1.3 && < 1.4
                       , either >= 4.5 && < 4.6
                       , exceptions >= 0.8 && < 0.9
                       , filepath >= 1.4 && < 1.5
                       , haskoin-core >= 0.4.3 && < 0.5
                       , haskoin-node >= 0.5 && < 0.6
                       , rocksdb-haskell >= 1.0 && < 1.1
                       , lifted-async >= 0.9 && < 0.10
                       , lifted-base >= 0.2 && < 0.3
                       , monad-control >= 1.0 && < 1.1
                       , monad-logger >= 0.3 && < 0.4
                       , mtl >= 2.2 && < 2.3
                       , network >= 2.6 && < 2.7
                       , nqe >= 0.1 && < 0.2
                       , resourcet >= 1.1 && < 1.2
                       , stm >= 2.4 && < 2.5
                       , string-conversions >= 0.4 && < 0.5
                       , text >= 1.2 && < 1.3
                       , time >= 1.8 && < 1.9
                       , transformers >= 0.5 && < 0.6
                       , transformers-base >= 0.4 && < 0.5
    default-language:    Haskell2010

executable haskoin-store
    hs-source-dirs:      app
    build-depends:       base >= 4.8 && < 5
                       , aeson >= 1.2 && < 1.3
                       , directory >= 1.3 && < 1.4
                       , filepath >= 1.4 && < 1.5
                       , haskoin-core >= 0.4.3 && < 0.5
                       , haskoin-node >= 0.5 && < 0.6
                       , haskoin-store
                       , http-types >= 0.9 && < 0.10
                       , monad-logger >= 0.3 && < 0.4
                       , mtl >= 2.2 && < 2.3
                       , nqe >= 0.1 && < 0.2
                       , optparse-applicative >= 0.14 && < 0.15
                       , scotty >= 0.11 && < 0.12
                       , string-conversions >= 0.4 && < 0.5
                       , temporary >= 1.2 && < 1.3
                       , text >= 1.2 && < 1.3
    main-is:             Main.hs
    default-language:    Haskell2010
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite haskoin-store-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:       base >= 4.8 && < 5
                       , bytestring >= 0.10 && < 0.11
                       , directory >= 1.3 && < 1.4
                       , exceptions >= 0.8 && < 0.9
                       , filepath >= 1.4 && < 1.5
                       , haskoin-core >= 0.4.3 && < 0.5
                       , haskoin-node >= 0.5 && < 0.6
                       , haskoin-store
                       , hspec >= 2.4 && < 3
                       , lifted-async >= 0.9 && < 0.10
                       , lifted-base >= 0.2 && < 0.3
                       , monad-control >= 1.0 && < 1.1
                       , monad-logger >= 0.3 && < 0.4
                       , mtl >= 2.2 && < 2.3
                       , network >= 2.6 && < 2.7
                       , nqe >= 0.1 && < 0.2
                       , random >= 1.1 && < 1.2
                       , stm >= 2.4 && < 2.5
                       , string-conversions >= 0.4 && < 0.5
                       , temporary >= 1.2 && < 1.3
                       , transformers-base >= 0.4 && < 0.5
    default-language:    Haskell2010
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N