name:                  haskoin-wallet
version:               0.5.0
synopsis:
    Lightweight command-line Bitcoin wallet
description:
    haskoin-wallet (hw) is a lightweight Bitcoin wallet using BIP39 mnemonics
    and BIP32 key derivations. It requires a full blockchain index such as
    haskoin-store to query balances and unspent outputs. The wallet can both
    build transactions in read-only (xpub-only) mode and sign them in an
    offline environment.
homepage:              http://github.com/haskoin/haskoin
bug-reports:           http://github.com/haskoin/haskoin/issues
tested-with:           GHC==8.0.2
license:               PublicDomain
license-file:          UNLICENSE
author:                Philippe Laprade, Jean-Pierre Rupp
maintainer:            xenog@protonmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2

source-repository head
    type:     git
    location: git://github.com/haskoin/haskoin.git

library
    hs-source-dirs: src
    exposed-modules: Network.Haskoin.Wallet
                   , Network.Haskoin.Wallet.Entropy
                   , Network.Haskoin.Wallet.AccountStore
                   , Network.Haskoin.Wallet.Signing
                   , Network.Haskoin.Wallet.HTTP
                   , Network.Haskoin.Wallet.HTTP.BlockchainInfo
                   , Network.Haskoin.Wallet.HTTP.Insight
                   , Network.Haskoin.Wallet.HTTP.Haskoin
                   , Network.Haskoin.Wallet.Amounts
                   , Network.Haskoin.Wallet.ConsolePrinter
                   , Network.Haskoin.Wallet.FoundationCompat

    build-depends: aeson                         >= 0.8
                 , ansi-terminal
                 , aeson-pretty
                 , base                          >= 4.8
                 , base16-bytestring
                 , base64-bytestring
                 , bytestring
                 , cereal                        >= 0.5
                 , containers                    >= 0.5
                 , console-program
                 , directory
                 , entropy                       >= 0.3.7
                 , foundation                    >= 0.0       && < 0.1
                 , foundation-edge               >= 0.0.3     && < 0.1
                 , haskeline
                 , haskoin-core                  >= 0.5       && < 0.6
                 , http-types                    >= 0.9
                 , lens
                 , lens-aeson
                 , pretty
                 , string-conversions
                 , text
                 , transformers
                 , wreq

    ghc-options: -Wall

executable hw
    main-is: Main.hs
    build-depends: base, haskoin-wallet
    hs-source-dirs: app
    ghc-options: -Wall
                 -O3
                 -threaded
                 -eventlog
                 -rtsopts
                 -with-rtsopts=-N4

test-suite test-haskoin-wallet
    type: exitcode-stdio-1.0
    main-is: Main.hs

    other-modules: Network.Haskoin.Wallet.Spec
                 , Network.Haskoin.Wallet.Arbitrary

    build-depends: aeson                         >= 0.8
                 , base                          >= 4.8
                 , bytestring
                 , cereal
                 , containers                    >= 0.5
                 , haskoin-core                  >= 0.5       && < 0.6
                 , haskoin-wallet
                 , hspec
                 , lens
                 , string-conversions
                 , text
                 , HUnit
                 , QuickCheck

    hs-source-dirs: test
    ghc-options: -Wall

